<resources>
    <string name="app_name">GKV</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vision_string">
       To emerge as an internationally acclaimed Technical University ot impart futuristic technical
        education and creation of vibrant research enterprise to create quality engineers and researchers,
        truly world class leaders and unleashes technological innovations to serve the global society and
        improve the quality of life.
    </string>
    <string name="mission_string">
        Gurukul Kangri Viswavidyalaya, Haridwar strives to create values and ethics in its products by inculcating depth
        and intensity in its education standards and need based research through

    </string>
    <string name="vc_string">
        Is a well known academician and administrator.A Double Post Graduate in Hindi and Sanskrit Gurukul Kangri University
        and Punjab University respectively.He is a perfect blend of administration and academics, having a wide experience of
        administration as Principal / Director and having many books / papers to his credit.He is a Ph.D from Punjab University.
        Has more than 35 years of teaching experience.
    </string>
    <string name="history_string">Gurukula Kangri Vishwavidyalaya was founded on March 4, 1902 by Swami Shraddhanandaji with the sole aim to revive the ancient Indian Gurukula
        System of education, on the bank of Ganges at a distance of about 6 km. from Hardwar and about 200 km. from Delhi. This institution was established with the objective of providing an indigenous alternative to
        Lord Macaulay’s education policy by imparting education in the areas of vedic literature, Indian philosophy, Indian culture, modern sciences and research.It is a deemed to be university fully funded by UGC/Govt. of India.
        Arya Samaj has been advocating women’s education since the day it was founded. As part of its policies for the up-liftment of women in the country, Kanya Gurukula Campus, Dehradun was established in 1922 by Acharya Ramdevji as a second campus of women’s education.
        To give real shape to the dreams of Swami Shraddhanandaji, Kanya Gurukula Campus, Hardwar was established in 1993.     Gurukula has witnessed many distinguished guests in its journey till date. To name a few of them are Mr.C.F. Andrews, Former Prime Minister of Britain,
        Mr. Remjy Mcdonald, Mahatma Gandhi, Pt. Madan Mohan Malviya, Dr. Rajendra Prasad, Dr Radha Krishnan, Sh.Jamnalal Bajaj,Dr. Munje, Sadhu Vaswani,Pt. Jawahar Lal Nehru, Smt. Indira Gandhi and Sh.Gyani Jail Singh, Sh.L.K.Advani and recently in 2011 Smt.Meira Kumar, Speaker Lok
        Sabha visited the vishwavidyalaya.</string>
    <string name="idea_club">
       In a technical organization like GKV, Haridwar; IDEA AND INNOVATION CELL is the hub of ideas which is designed to help
       new innovators emerge into great inventors. The official club fosters a progressive platform for the techno-nerds through proper
       technical guidance and able financial support. With a practical approach for the theoritical knowledge, the club tends to collaborate with
       industrial estates and develop projects to exhibit an Industrial Exposure as well as develop the management skills of the learners.
       Apart from learning, the students are encourages to indulge in various National and International Competitions to learn and judge their
       tech-knowledge. As a sequel, the Idea Club aims to infuse idea and technology to give way to new innovation.
   </string>
    <string name="edp">
        Entrepreneurship is the process of starting a business or other organization. The entrepreneur develops a business model,
        acquires the human and other required resources, and is fully responsible for its success or failure. The EDP (Entrepreneurship Cell)
        is a non-profit organization run by students of GKV Haridwar.
    </string>
    <string name="music">
        The function of this club is provide an opportunity to the students of the University to develop their musical talents and other
        cultural activities.
    </string>
    <string name="robotics">
        Robotics Club of GKV is one of the most active among all the technical colleges in India serving the nation in the fields
        of Robotics and technology. The Club offers indispensilbe guidance, workshops and tutorials along with tools, equipments, components
        and workspace among the students of the university international level competitions. It's more than that where a group of students
        come together with new innovation and ideas that makes the available technology to play with it.

    </string>
    <string name="avc">
        Previously The Audio Visual Club was providing entertainment to students and staff members, by way of screening Hindi/English
        films once or twice a week. The club was organizing Annual Film Festival once a year. Now it is organizing Disha a National level documentary film making competition.

    </string>
    <string name="quiz">
        This is the Official Quiz fo GKV, Haridwar. Quizzine organizes quizzes in the campus premises every Saturday. Each meeting covers
        questions on wide varitety of topics like sports, food, India, cartoons, music, history, science fiction, films, love and marriage.
         The Quiz Club is largely responsible for the resurgence of quizzing events in GKV. The wide exposure to trivia and the recycling
        of outside quizzes also helps.
    </string>
    <string name="art">
        This is the official Art and Photography club of GKV, Haridwar. The function of this club is provide an opportunity to the
        students of the University to develop their Artistic talents. It Organizes competitions on different categories and photography
        like pencil sketches , colour painting etc. It organizes art and photogarphy competition.
    </string>
    <string name="athletes">
        It promotes athletic activity among the students. It conduct the sports and athletic tournaments of the University. It arranges
        and supervise participation of the University teams in the various student-teacher friendly matches, iner Hall/inter class competetion
        , inter University,inter state sports and athletic meets.
    </string>
    <string name="dance">
    This is the Official Dance Club of GKV, Haridwar. The function of this club is provide an opportunity to the students of the
    University to develop their Dance talents and other cultural activities. The members of this club are selected on the basis of
    Audition. This Club perform dance in all events of college and also perticipate in different dance events outside college.
</string>
    <string name="literary">
        The function of Literary society is to promote literacy activity amongst the students and to prepare and arrange for publication
        of the University magazine. The Vission is the Official e-Newsletter of the Institute, GKV, Haridwar.
        It is maintained by the Literary Society of GKV. This is a platform for the students to keep track of the Events happening in
        the campus and it also publishes Interview of Student, Faculty, Alumini at regular interval. The Literary Society of GKV also present
        range of events in JNANGNI the cultural fest of Gkv, Haridwar.
    </string>
    <string name="sanskar">
        SANSKAR KENDRA is the self motivated group with a desire to serve the society. It is initially started by a Small
        group of students of Gkv, Haridwar with a motive to educate the slum children. It has two center named Kirba and Panitanki pads. 150
        students are getting benefited. Apart from Education it focus on parent awareness, sanskar program to develop morality. It organizes
        plantation, program, Health camp, blood donation camp once in a year. It promoting computer literacy program in collaboration with
        UTPRERIT NGO and woman empowerment in collaboration with MCL Mahila Jagruti M
    </string>
    <string name="library_fragment1">
        THE LIBRARY REMAINS OPEN FROM 10 AM TO 8 PM ON ALL WORKING DAYS OF THE WEEK EXCEPT IN THE HOT SUMMER MONTHS ( APRIL AND MAY )
        DURING WHICH THERE IS A BREAK FROM 1 PM  TO 2.30 PM.
    </string>
    <string name="library_fragment2">
        The University Library is the largest technical library of the State. A new separate library building has come up with the
        assistance from U.G.C and State Govt. and the library has started functioning in its newly constructed building since July, 1997
    </string>
    <string name="rule1">
        1. The members will get, at a time of membership, a borrowers card. On each occasion, a book is book is borrowed or returned
        , the borroweres's card is to be presented at the issue counter of necessary entry.
    </string>
    <string name="rule2">
        2. Borrowers card will be issued to the students on application till 2 months from the date of admission and after that Rs. 50
        will be levied for late application.
    </string>
    <string name="rule3">
        3. Books on loan with members can be recalled by the library at any time.
    </string>
    <string name="rule4">
       4. Manuscript, reference books, damaged books, rare books, standard books are not issued ordinarily on loan.
    </string>
    <string name="rule5">
        5. The loss of this pass book should be reported immediately.
    </string>
    <string name="rule6">
        6. For misuse of this pass book Library shall not be responsible in any manner.
    </string>
    <string name="rule7">
        7. Duplicate pass book will be issued After one week against a payment of Rs. 100.
    </string>
    <string name="rule8">
        8. Library documents will be issued only against this pass book.
    </string>
    <string name="gym_fragments">
        IT REMAINS OPEN FROM 5:30 AM TO 9:00 AM IN MORNING SHIFT AND 4:00 PM TO 7:00 PM IN EVENING IN MON TO SAT.
    </string>
    <string name="computer1">
        THE FACULTIES REMAIN OPEN FROM 8:00 AM TO 8:00 PM ON ALL WORKING DAYS OF THE UNIVERSITY.
    </string>
    <string name="computer2">
        The Central Computer Facility of the University was established in the University in the year 2000; with financial assistance
        from the MHRD, Govt. of India as a Zero level facility. During the year 2002-2003, a HCL-HP Meteors. The facilities have been upgraded and
        expanded from time to time. In the year 2000, an advanced Pentium based SCO-Unix server with 15 terminals was added and a good number
        of application softwares have been installed for the of the University.
    </string>
    <string name="computer3">
        Looking at the present days needs, softwares like JAVA, ORACLE, Visual Studio etc. have been kept open for the benefit of the students.
        Facilities also exist for using various languages like Basic, fortran - 77, pascal, C and C++ and Foxpro. in various operating enviornment
        like Windows, Dos, Unix and Linux.
    </string>
    <string name="computer4">
        Internet with e-mail and browser facility have been provided ot the students with assistance from All India Council for Technical
        Education, New Delhi. Presently, this facility cater the need of students as well as  faculty through a 64 kbps broadband GKV connectivity
        and inhouse linux-based networking. It helps to students for various on-line tests for jobs, searching the research
        paper for their project works/thesis etc. Proposals have already been made for entire Unviersity and campus networking through fibre-optics cables.
        The facility remains open from 8.00 AM to 8.00 PM on all working days in the University.

    </string>
</resources>